[gd_scene load_steps=3 format=3 uid="uid://8njq3agtinqy"]

[ext_resource type="Script" path="res://NotGames/Program.gd" id="1_86nmk"]

[sub_resource type="LabelSettings" id="LabelSettings_c8se1"]
font_size = 35

[node name="LP4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86nmk")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 320.0
offset_bottom = 576.0
text = "Calculate"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 448.0
offset_right = 704.0
offset_bottom = 576.0
text = "Clear"

[node name="Button3" type="Button" parent="."]
layout_mode = 0
offset_left = 832.0
offset_top = 448.0
offset_right = 1088.0
offset_bottom = 576.0
text = "Close"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 16.0
offset_right = 800.0
offset_bottom = 272.0
text = "Enter package weight in kilometers:
Enter package length in centimeters:
Enter package width in centimeters:
Enter package height in centimeters:"
label_settings = SubResource("LabelSettings_c8se1")
horizontal_alignment = 2
vertical_alignment = 3

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 24.0
offset_right = 968.0
offset_bottom = 63.0

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 96.0
offset_right = 968.0
offset_bottom = 135.0

[node name="LineEdit3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 168.0
offset_right = 968.0
offset_bottom = 207.0

[node name="LineEdit4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 864.0
offset_top = 232.0
offset_right = 968.0
offset_bottom = 271.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 368.0
offset_top = 320.0
offset_right = 784.0
offset_bottom = 424.0
label_settings = SubResource("LabelSettings_c8se1")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
